--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
   "code-runner.executorMap": {
-    "c": "gcc -Wextra -DWLR_USE_UNSTABLE $fullFileName -o $workspaceRoot/bin/$fileNameWithoutExt -I/usr/include/cairo -I/usr/include/libdrm -I/usr/include/pixman-1 -I/usr/include/wlr -lcairo -lwlroots -lwayland-server -lxkbcommon && $workspaceRoot/bin/$fileNameWithoutExt"
+    "c": "gcc -Wextra -DWLR_USE_UNSTABLE $fullFileName -o $workspaceRoot/bin/$fileNameWithoutExt  -I$workspaceRoot/src -I/usr/include/cairo -I/usr/include/libdrm -I/usr/include/pixman-1 -I/usr/include/wlroots-0.18 -lcairo -lwlroots-0.18 -lwayland-server -lxkbcommon && $workspaceRoot/bin/$fileNameWithoutExt"
     // "c": "echo $fileNameWithoutExt"
   }
 }
