--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,13 @@
     "c": "gcc -Wextra -DWLR_USE_UNSTABLE $fullFileName -o $workspaceRoot/bin/$fileNameWithoutExt  -I$workspaceRoot/test -I/usr/include/cairo -I/usr/include/libdrm -I/usr/include/pixman-1 -I/usr/include/wlroots-0.18 -lcairo -lwlroots-0.18 -lwayland-client -lwayland-server -lxkbcommon && $workspaceRoot/bin/$fileNameWithoutExt"
     // "c": "gcc -Wextra -DWLR_USE_UNSTABLE $fullFileName -o $workspaceRoot/bin/$fileNameWithoutExt  -I$workspaceRoot/test -I/usr/include/cairo -I/usr/include/libdrm -I/usr/include/pixman-1 -I/usr/include/wlroots-0.18 -lcairo -lwlroots-0.18 -lwayland-client -lwayland-server -lxkbcommon && $workspaceRoot/bin/$fileNameWithoutExt",
     // "c": "echo $fileNameWithoutExt"
+  },
+  "files.associations": {
+    "*.meta": "json",
+    "*.jsx": "javascriptreact",
+    "*.tsx": "typescriptreact",
+    "new-commit": "markdown",
+    "wlr_seat.h": "c",
+    "wlr_pointer.h": "c"
   }
 }
