--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,6 @@
 {
   "code-runner.executorMap": {
     // "c": "gcc -Wextra -DWLR_USE_UNSTABLE $fullFileName -o $workspaceRoot/bin/$fileNameWithoutExt  -I$workspaceRoot/test -I/usr/include/cairo -I/usr/include/libdrm -I/usr/include/pixman-1 -I/usr/include/wlroots-0.18 -lcairo -lwlroots-0.18 -lwayland-client -lwayland-server -lxkbcommon && $workspaceRoot/bin/$fileNameWithoutExt"
-    // "c": "gcc -Wextra -DWLR_USE_UNSTABLE $fullFileName -o $workspaceRoot/bin/$fileNameWithoutExt  -I$workspaceRoot/test -I/usr/include/cairo -I/usr/include/libdrm -I/usr/include/pixman-1 -I/usr/include/wlroots-0.18 -lcairo -lwlroots-0.18 -lwayland-client -lwayland-server -lxkbcommon && $workspaceRoot/bin/$fileNameWithoutExt",
-    "c": "gcc $fullFileName -o $workspaceRoot/bin/$fileNameWithoutExt && $workspaceRoot/bin/$fileNameWithoutExt"
+    "c": "gcc $fullFileName -o $workspaceRoot/bin/$fileNameWithoutExt -I/usr/include/cairo  $(pkg-config --cflags --libs cairo x11 gtk4 glib-2.0) && $workspaceRoot/bin/$fileNameWithoutExt"
   }
 }
